添加弹幕视频等修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     //view注入
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
