--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,8 @@ dependencies {
     //view注入
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    apt 'com.android.databinding:compiler:2.3.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile "com.android.support:design:25.2.0"
+
 }
