--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,7 @@ dependencies {
     apt 'com.android.databinding:compiler:2.3.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile "com.android.support:design:25.2.0"
-
+    compile('com.alibaba.android:vlayout:1.0.2@aar') {
+        transitive = true
+    }
 }
