--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,16 @@ dependencies {
     compile('com.alibaba.android:vlayout:1.0.2@aar') {
         transitive = true
     }
+    //图片库 fresco
+    compile('com.facebook.fresco:fresco:0.14.1') {
+        exclude module: 'support-v4'
+        exclude group: 'com.android.support'
+    }
+    compile 'com.facebook.fresco:animated-gif:0.14.1'
+    compile("com.facebook.fresco:imagepipeline-okhttp3:0.14.1") {
+        exclude module: 'support-v4'
+        exclude group: 'com.android.support'
+    }
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+
 }
