--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,16 @@
 buildscript {
     repositories {
         jcenter()
+//        mavenCentral()
+//        maven { url "https://jitpack.io" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-//        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5"
+        classpath 'com.tencent.bugly:symtabfileuploader:1.3.9'
+        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:${TINKER_VERSION}"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,9 +21,30 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+//        mavenCentral()
+//        maven { url "https://jitpack.io" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext {
+    // SDK Version
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.2'
+    minSdkVersion = 14
+    targetSdkVersion = 25
+
+    supportVersion = '24.0.0'
+
+    // support
+    libSupportV7Appcompat = "com.android.support:appcompat-v7:${supportVersion}"
+    libSupportV7CardView = "com.android.support:cardview-v7:${supportVersion}"
+    libSupportV7RecyclerView = "com.android.support:recyclerview-v7:${supportVersion}"
+    libSupportV7Design = "com.android.support:design:${supportVersion}"
+//    libSupportAnnotations = "com.android.support:support-annotations:${supportVersion}"
+//    libSupportV7GridLayout = "com.android.support:gridlayout-v7:${supportVersion}"
+
 }
