--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 }
 
 dependencies {
+    compile project(':mylibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -79,5 +80,6 @@ dependencies {
         exclude group: 'com.android.support'
     }
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+    compile 'com.airbnb.android:lottie:2.1.0'
 
 }
