--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
     defaultConfig {
         applicationId "com.example.administrator.myapplication"
         minSdkVersion 16
@@ -38,7 +42,7 @@ android {
 }
 
 dependencies {
-    compile project(':mylibrary')
+//    compile project(':mylibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -61,8 +65,8 @@ dependencies {
     compile 'com.github.ctiao:ndkbitmap-x86:0.6.4'
     //view注入
     compile 'com.jakewharton:butterknife:8.0.1'
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    apt 'com.android.databinding:compiler:2.3.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.0.1'
+    annotationProcessor 'com.android.databinding:compiler:2.3.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile "com.android.support:design:25.2.0"
@@ -81,5 +85,23 @@ dependencies {
     }
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile 'com.airbnb.android:lottie:2.1.0'
+    //b战视频
+//    # required, enough for most devices.
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
+
+//    # Other ABIs: optional
+//    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.4'
+//    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.4'
+//    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.4'
+//    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.4'
+
+//    # ExoPlayer as IMediaPlayer: optional, experimental
+    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.4'
+
+
+    compile 'com.google.android.exoplayer:exoplayer:r2.5.4'
+
+    compile 'com.tencent.tinker:tinker-ziputils:1.9.0'
 
 }
