--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.51'
     repositories {
+        google()
         jcenter()
+//        google()
 //        mavenCentral()
 //        maven { url "https://jitpack.io" }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.tencent.bugly:symtabfileuploader:1.3.9'
         classpath "com.tencent.tinker:tinker-patch-gradle-plugin:${TINKER_VERSION}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        compileApi(':mylibrary')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +24,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+//        google()
 //        mavenCentral()
 //        maven { url "https://jitpack.io" }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -32,9 +38,9 @@ task clean(type: Delete) {
 }
 ext {
     // SDK Version
-    compileSdkVersion = 25
-    buildToolsVersion = '25.0.2'
-    minSdkVersion = 14
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.2'
+    minSdkVersion = 16
     targetSdkVersion = 25
 
     supportVersion = '24.0.0'
