--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion "27.0.3"
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
@@ -11,13 +11,11 @@ android {
     defaultConfig {
         applicationId "com.example.administrator.myapplication"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
         multiDexEnabled true
-
-
     }
     signingConfigs {
         releaseconfig {
@@ -30,6 +28,9 @@ android {
     dataBinding {
         enabled = true
     }
+    lintOptions {
+        abortOnError false
+    }
     buildTypes {
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -40,15 +41,17 @@ android {
         }
     }
 }
+def grp = parent.ext
 
 dependencies {
 //    compile project(':mylibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'fm.jiecao:jiecaovideoplayer:5.5'
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    implementation grp.libSupportV7Appcompat
+
+//    implementation('com.android.support:appcompat-v7:26.1.0') {
+//        exclude group: 'android.arch.lifecycle'
+//    }
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
     //retrofit   库加入  自带可以导入okhttp库
@@ -56,6 +59,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'com.android.support:multidex:+'
+
 //video
     compile 'fm.jiecao:jiecaovideoplayer:5.5'//视频
     compile 'com.github.ctiao:DanmakuFlameMaster:0.6.4'//弹幕
@@ -66,10 +70,14 @@ dependencies {
     //view注入
     compile 'com.jakewharton:butterknife:8.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.0.1'
-    annotationProcessor 'com.android.databinding:compiler:2.3.0'
+    annotationProcessor('com.android.databinding:compiler:2.3.0') {
+        exclude group: 'com.android.support'
+    }
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-    compile "com.android.support:design:25.2.0"
+    compile("com.android.support:design:27.1.0") {
+        exclude group: 'android.arch.lifecycle'
+    }
     compile('com.alibaba.android:vlayout:1.0.2@aar') {
         transitive = true
     }
@@ -82,6 +90,7 @@ dependencies {
     compile("com.facebook.fresco:imagepipeline-okhttp3:0.14.1") {
         exclude module: 'support-v4'
         exclude group: 'com.android.support'
+        exclude group: 'android.arch.lifecycle'
     }
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile 'com.airbnb.android:lottie:2.1.0'
@@ -103,5 +112,19 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.5.4'
 
     compile 'com.tencent.tinker:tinker-ziputils:1.9.0'
+    // Architecture components
+    //lifecycles,livedata,viewmodel
+    implementation grp.lifecycle.runtime
+    implementation grp.lifecycle.java8
+    implementation grp.lifecycle.extensions
+    annotationProcessor grp.lifecycle.compiler
+
+    //room
+    implementation grp.room.runtime
+    annotationProcessor grp.room.compiler
+    //rxjava的支持
+//    implementation "android.arch.persistence.room:rxjava2:1.0.0-rc1"
+    //paging
+    implementation grp.paging.runtime
 
 }
